--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -87,12 +87,12 @@
     <string name="stat_total">合計:</string>
     <string name="stat_regular_value">普通 (値):</string>
     <string name="stat_regular_count">普通 (数):</string>
-    <string name="stat_gold_value">金 (値):</string>
-    <string name="stat_gold_count">金 (数):</string>
-    <string name="stat_silver_value">銀 (値):</string>
-    <string name="stat_silver_count">銀 (数):</string>
-    <string name="stat_bronze_value">銅 (値):</string>
-    <string name="stat_bronze_count">銅 (数):</string>
+    <string name="stat_gold_value">ゴールド (値):</string>
+    <string name="stat_gold_count">ゴールド (数):</string>
+    <string name="stat_silver_value">シルバー (値):</string>
+    <string name="stat_silver_count">シルバー (数):</string>
+    <string name="stat_bronze_value">ブロンズ (値):</string>
+    <string name="stat_bronze_count">ブロンズ (数):</string>
     <string name="stat_bonus">ボーナス:</string>
     <string name="stat_food_eaten">食べたフードの数:</string>
     <string name="stat_players_eaten">食べたプレイヤーの数:</string>
