--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -114,12 +114,12 @@
     <string name="gamemode_knockout">ノックアウト</string>
     <string name="gamemode_adventure">アドベンチャー</string>
     <string name="gamemode_coming_soon">近日公開</string>
-    <string name="description_classic">Eat smaller players and become the largest blob in the universe! Use your size to dominate the map, but watch out for bigger players who want to eat you!</string>
-    <string name="description_teams">Join forces with other players of the same color! Work together to trap enemies and become the dominant team on the leaderboard. Teammates cannot eat each other.</string>
+    <string name="description_classic">小さいプレイヤーを食べてマップで最大のブロブになろう！サイズを使ってマップを制しよう。だがより大きなブロブ気をつけて！</string>
+    <string name="description_teams">同じカラーのプレイヤーに参加しよう！敵チームのプレイヤーブロブを食べて、チームがリーダーボードを制するようにしよう！チームメイトは同じチームのプレイヤーを食べられない。</string>
     <string name="description_survival">１ライフ、１ラウンド！リスポーン可能時間が終了する前に、できるだけ多くのスコアを集めろ。その後は、一度の死が命取りになる！最後まで生き残るか、時間終了時に最大サイズとなって勝利を掴め！</string>
     <string name="description_team_survival">チーム対抗サバイバル！仲間と協力して敵チームを撃破せよ。最後まで生き残るか、タイムアップ時にチームの合計サイズが最大であれば勝利だ！</string>
     <string name="description_knockout">Compete in elimination rounds! Players can respawn freely until eliminated at regular intervals. The smallest players at each interval are eliminated permanently. Be the last one standing to win!</string>
-    <string name="description_adventure">Complete challenging stages with unique objectives! Progress through increasing difficulties, earn rewards, and see how far you can go. Each stage brings new challenges!</string>
+    <string name="description_adventure">唯一の目的のアドベンチャーステージを完了しよう！難易度はステージが進むにつれて上がり、ボーナスを獲得し、スキルを披露しよう！各ステージで難易度が上がる！</string>
     <string name="description_coming_soon">このゲームモードは近日公開予定です。続報をお待ちください！</string>
 
     <!-- Map sizes !-->
@@ -186,7 +186,7 @@
     <string name="game_over">ゲームオーバー！</string>
     <string name="stage_clear">ステージ %s 完了！</string>
     <string name="stage_failed">ステージ %s 失敗！</string>
-    <string name="restarting_adventure">アドベンチャーリスタート中…</string>
+    <string name="restarting_adventure">アドベンチャー再起動中…</string>
 
     <!-- Suffixes for ORDINAL numbers !-->
     <string name="ordinal_first">%d位</string>
