--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -114,7 +114,7 @@
     <string name="gamemode_knockout">ノックアウト</string>
     <string name="gamemode_adventure">アドベンチャー</string>
     <string name="gamemode_coming_soon">近日公開</string>
-    <string name="description_classic">小さいプレイヤーを食べてマップで最大のブロブになろう！サイズを使ってマップを制しよう。だがより大きなブロブ気をつけて！</string>
+    <string name="description_classic">小さいプレイヤーを食べてマップで最大のブロブになろう！サイズを使ってマップを制しよう。だがより大きなブロブに気をつけて！</string>
     <string name="description_teams">同じカラーのプレイヤーに参加しよう！敵チームのプレイヤーブロブを食べて、チームがリーダーボードを制するようにしよう！チームメイトは同じチームのプレイヤーを食べられない。</string>
     <string name="description_survival">１ライフ、１ラウンド！リスポーン可能時間が終了する前に、できるだけ多くのスコアを集めろ。その後は、一度の死が命取りになる！最後まで生き残るか、時間終了時に最大サイズとなって勝利を掴め！</string>
     <string name="description_team_survival">チーム対抗サバイバル！仲間と協力して敵チームを撃破せよ。最後まで生き残るか、タイムアップ時にチームの合計サイズが最大であれば勝利だ！</string>
