--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -168,7 +168,7 @@
     <!-- Skins !-->
     <string name="skin">スキン</string>
     <string name="no_skin">スキンなし</string>
-    <string name="selected_skin">現在スキン</string>
+    <string name="selected_skin">現在のスキン</string>
     <string name="select_skin_color">カラーを選択</string>
     <string name="skin_color_preview">プレビュー:</string>
     <string name="skin_tab_standard">組み込み</string>
